--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -23,7 +23,11 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "main.cc"
             )
 
-set(INCLUDE_DIRS "." "display" "audio_codecs" "protocols" "audio_processing")
+set(INCLUDE_DIRS "." "display" "audio_codecs" "protocols" "audio_processing" "transport")
+
+# transport 相关文件支持
+file(GLOB TRANSPORT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/transport/*.cc)
+list(APPEND SOURCES ${TRANSPORT_SOURCES})
 
 # 添加 IOT 相关文件
 file(GLOB IOT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/iot/things/*.cc)
